# retro-works

./: .gitignore  16Colors.txt  24SOLVE.BAS  24solve.php  Dial-In_Server.md  GSOLVE.BAS  LICENSE  PPP_Network.md  PPP_Server.md  README.md  TX.py  Telnet_Server.md  UCDOS-Default.gpl  crd2txt.py  dialin.en.md  dialin.zh.md  dos.en.md  dos.zh.md  dosvfont.py  getch.py  getch_test.py  hanzi.py  install.md  install_8086.md  kbhit.py  mkaudiocd.py  mkphotocd.sh  mkphotofloppy.sh  palette.py  pppd.en.md  pppd.md  pppd.zh.md  sudoku.c  telnetd.py  tx.py  txdemo.py  txfgfs.py  txlogin.py  txmaker.py  txmusicbox.py  (+2 more)
BASIC/: 2048.BAS  2048A.BAS  (+101 more)
retro-servers/: pyproject.toml  retro-servers.example.toml
retro-servers/retroservers/: __init__.py  httpfileserver.py  pop3.py  retro-servers.toml.def  smtp.py
retro-servers/retroservers/mailcenter/: __init__.py  askbot.py
retro-servers/retroservers/telnet/: ssh.py  termux.py  util.py
retro-servers/retroservers/util/: iconv.py  misc.py  robot.py  tcpserver.py  watchdog.py
retro-servers/retroservers/web/: __init__.py  index.py  mail.py  webserver.py
retro-servers/retroservers/web/handlers/: index.py  mail.py
retro-servers/retroservers/web/template/: index.html  mail_content.html  weather.html
retro-servers/src/retroservers/: __main__.py  smtp.py
retro-servers/src/retroservers/mailcenter/: __init__.py  aibot.py  askbot.py  mailcenter.py
retro-servers/src/retroservers/telnet/: ssh.py  util.py
retro-servers/src/retroservers/util/: __init__.py  daemon.py  tcpserver.py
retro-servers/src/retroservers/web/: webserver.py
(+668 files in other folders)
